<resources>
    <string name="app_title" translatable="false">KirimChiqim</string>
    <string name="hello">Welcome!</string>
    <string name="add_new">Add New</string>
    <string name="show_all">Show All</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_date_and_time">Select Date</string>
    <string name="income">Income</string>
    <string name="expenditure">Expenditure</string>
    <string name="add_new_item">Add New Item</string>
    <string name="enter_description">Enter Description</string>
    <string name="check">Check</string>
    <string name="linkedin" translatable="false">LinkedIn.com/in/jsr1611<a href="https://www.linkedin.com/in/jsr1611/"></a>
</string>

    <string name="github" translatable="false">GitHub.com/jsr1611<a href="https://github.com/jsr1611"></a>
</string>
    <string name="photo">Photo</string>
    <string name="name">Developer</string>
    <string name="phone_number">Phone number</string>
    <string name="company">Company</string>
    <string name="about_me">Info</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="alert_enter_all_values">Please enter all the data...</string>
    <string name="alert_check_only_one_box">Please,  check at least one box...</string>
    <string name="alert_item_added_successfully">Item has been added successfully.</string>
    <string name="totalCount">Total (pcs)</string>
    <string name="totalAmount">Total Amount</string>
    <string name="no_data_found">No data found.</string>
    <string name="amount">Amount</string>
    <string name="TYPE_Income" translatable="false">Income</string>
    <string name="TYPE_Expenditure" translatable="false">Expenditure</string>
    <string name="address">Address</string>
    <string name="city">Seoul, S. Korea.</string>
    <string name="JAN">JAN</string>
    <string name="FEB">FEB</string>
    <string name="MAR">MAR</string>
    <string name="APR">APR</string>
    <string name="MAY">MAY</string>
    <string name="JUN">JUN</string>
    <string name="JUL">JUL</string>
    <string name="AUG">AUG</string>
    <string name="SEP">SEP</string>
    <string name="OCT">OCT</string>
    <string name="NOV">NOV</string>
    <string name="DEC">DEC</string>
    <string name="selectStartDate">Select Start Date</string>
    <string name="selectEndDate">Select End Date</string>
    <string name="startDateBeforeEndDate">Start date has to be before or equal to the end date...</string>
    <string name="app_name" translatable="false">KirimChiqim App</string>
    <string name="action_backup">Backup</string>
    <string name="action_import">Import</string>
    <string name="action_backup_drive">Backup to Google Drive</string>
    <string name="action_import_drive">Import from Google Drive</string>
    <string name="action_clear_data"> Clear Data</string>
    <string name="action_recalculate_Balance">Recalculate Balance</string>

</resources>