<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        app:elevation="0dp"
        app:srcCompat="@drawable/ic_add" />

    <TextView
        android:id="@+id/header_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/hello"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />


    <LinearLayout
        android:id="@+id/linearlayoutBtns"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/btn_goto_add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_goto_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="330dp"
        android:layout_below="@id/header_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/budgeticon"
         />

    <Button
        android:id="@+id/btn_goto_aboutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:layout_above="@id/linearlayoutBtns"
        android:backgroundTint="@color/teal_200"
        android:layout_centerHorizontal="true"


        />
</RelativeLayout>
