<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/photo" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="118dp"
            android:layout_height="99dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/textView_name"
            android:src="@drawable/_" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_name1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/name" />


        <TextView

            android:id="@+id/textView10_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Jumanazar Said"
            android:textAlignment="viewStart" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2_email1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="Email" />

        <TextView
            android:id="@+id/textView6_email2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView2_email1"
            android:layout_weight="1"


            android:gravity="start"
            android:text="jsr161190@gmail.com" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11_phone1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textFontWeight="1" />


        <TextView
            android:id="@+id/textView12_phoneNumber1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6_email2"
            android:layout_toEndOf="@id/textView11_phone1"
            android:layout_toRightOf="@id/textView11_phone1"

            android:layout_weight="1"
            android:text="010-2860-1611"
            tools:ignore="NotSibling" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3_company1"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/company"
            android:textFontWeight="1" />

        <TextView

            android:id="@+id/textView7_company2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DLIT Inc."
            android:textFontWeight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView4_linkedin1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="LinkedIn"
            android:textFontWeight="1" />


        <TextView
            android:id="@+id/textView8_linkedin2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/linkedin"
            android:textFontWeight="1" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5_gitHub1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:layout_marginLeft="20dp"
            android:layout_weight="1"

            android:text="GitHub" />

        <TextView
            android:id="@+id/textView_github2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/github" />


    </LinearLayout>


</LinearLayout>